--- a/personal-website/src/components/AboutMe.css
+++ b/personal-website/src/components/AboutMe.css
@@ -10,14 +10,6 @@
     padding: 6rem 12rem;
 }
 
-.home-bottom .border {
-    border-color: #FFECD1;
-    border-width: 4px;
-    border-style: solid;
-    border-radius: 40px;
-    background-color: #141414;
-}
-
 .home-bottom .border .paragraph-container {
     padding: 46px;
 }
