--- a/personal-website/src/components/MovingBorderBox.css
+++ b/personal-website/src/components/MovingBorderBox.css
@@ -26,10 +26,10 @@
 	--c2: rgba(168, 239, 255, 0.1);
 }
 
-.box {
+.border {
+	border: 0.35rem solid;
 	border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
 	animation: borderRotate var(--d) linear infinite forwards;
-    background-color: black;
 }
 
 @keyframes borderRotate {
@@ -37,4 +37,3 @@
 		--angle: 420deg;
 	}
 }
-
